# rust-lang-lower

./: .gitignore  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: test.c  test_simple.py
flat/: Cargo.toml
flat/src/: block_format.rs  blockify.rs  lib.rs  mlir.rs  scope.rs
logic/: Cargo.toml
logic/src/: lib.rs  unify.rs
lower/: Cargo.toml
lower/src/: ast.rs  blockify.rs  blocks.rs  builder.rs  cfg.rs  code.rs  compile.rs  diagnostics.rs  env.rs  first_pass.rs  intern.rs  ir.rs  lib.rs  link.rs  lower.rs  mlir.rs  op.rs  place.rs  scope.rs  sort.rs  types.rs
parse/: Cargo.toml
parse/src/: lib.rs  main.rs  starlark.rs  template.html
src/: ast.rs  lib.rs  lower.rs  main.rs  starlark.rs
tests/: bare.star  fix.star  goto.star  loop.star  nested_func.star  prelude.c  static_var.star  test.py  test.star  test_assign1.star  test_cond.star  test_float.star  test_global.star  test_recursive.star  test_simple.py  test_static.star
