[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse = { path = "../parse" }
lower = { path = "../lower" }
codespan-reporting = "*"
melior = { path = "../../melior/melior" }
argh = "0.1.12"
simple_logger = "^4.3.0"
log = "*"
