[package]
name = "lower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
melior = "*"
im = "15.1.0"
log = "0.4"
miette = "5.10.0"
codespan-reporting = "*"
anyhow = "*"
thiserror = "*"

[dev-dependencies]
criterion = "0.3"
test-log = "0.2"

