[package]
name = "parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lower = { path = "../lower" }
starlark_syntax = { git = "https://github.com/facebookexperimental/starlark-rust.git", branch = "main" }
melior = "*"
log = "*"
anyhow = "*"
thiserror = "*"
codespan-reporting = "*"

