[package]
name = "parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lower = { path = "../lower" }
flat = { path = "../flat" }
starlark_syntax = { git = "https://github.com/facebookexperimental/starlark-rust.git", branch = "main" }
log = "*"
simple_logger = "^4.3.0"
anyhow = "*"
thiserror = "*"
codespan-reporting = "*"
argh = "0.1.12"
minijinja = "1.0.12"

[dev-dependencies]
criterion = "0.3"
test-log = "^0.2"
env_logger = "^0.10"


